--- a/index.html
+++ b/index.html
@@ -25,12 +25,7 @@
 
 
 <div class="navigation">
-	<ul>
-		<li><a href="#">Home<a/></li>
-		<li><a href="#">Nossos serviços<a/></li>
-		<li><a href="#">Portfolio<a/></li>
-		<li><a href="#">Contato<a/></li>
-	</ul>
+	
 </div>
 
 
@@ -45,7 +40,7 @@
 
       <img src="img1.jpg" alt="First slide" class="img-responsive" style="filter: grayscale(50%);">
        <div class="carousel-caption">
-<h1>Desenvolvimento de sistemas Web sob demanda</h1>
+<h1 style="font-size:35px;">Desenvolvimento de sistemas Web</h1>
       </div>
     </div>
 
@@ -133,8 +128,9 @@
 		</div>
 </div>
 
-<footer>Endereço: Rua Paraná Paranaué, CURITIBA-PR.   E-mail: agenciawebdev@webdev.com.br      Tel: (13) 9999-6666</footer>
-    <!-- jQuery first, then Tether, then Bootstrap JS. -->
+<footer>Endereço: Rua Paraná Paranaué, CURITIBA-PR.   E-mail:
+agenciawebdev@webdev.com.br      Tel: (13) 9999-6666</footer>     <!-- jQuery
+first, then Tether, then Bootstrap JS. -->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js" integrity="sha384-3ceskX3iaEnIogmQchP8opvBy3Mi7Ce34nWjpBIwVTHfGYWQS9jwHDVRnpKKHJg7" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.3.7/js/tether.min.js" integrity="sha384-XTs3FgkjiBgo8qjEjBk0tGmf3wPrWtA6coPfQDfFEY8AnYJwjalXCiosYRBIBZX8" crossorigin="anonymous"></script>
