--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
       <img src="img1.jpg" alt="First slide" class="img-responsive" style="filter: grayscale(50%);">
        <div class="carousel-caption">
-<h1 style="font-size:35px;">Desenvolvimento de sistemas Web</h1>
+<h1 style="font-size:35px;">Desenvolvimento Web</h1>
       </div>
     </div>
 
