--- a/index.html
+++ b/index.html
@@ -69,20 +69,20 @@
 <div class="container">
 
     <div class="row">
-        <div class="col-md-4" data-aos="fade-right">
+        <div class="col-md-4" data-aos="fade-up">
         	<img src="icon-dev.png" >
        		<h1 class="center-block" style="text-align:center">Desenvolvimento</h1>
        		<p>Desenvolvemos seu site, webApp, mobileApp, E-commerce e muito mais.</p>
         </div>
 
 
-        <div class="col-md-4" data-aos="fade-down">
+        <div class="col-md-4" data-aos="zoom-in">
         <img src="icon-seo.png">
        		<h1 class="center-block" style="text-align:center;">SEO</h1>
        		<p>Prestamos serviços e consultoria de SEO para melhorar o posicionamento do seu site nas pesquisas do Google.</p>
 			</div>
 
-			<div class="col-md-4" data-aos="fade-left">
+			<div class="col-md-4" data-aos="fade-down">
 			<img src="icon-mkt.png" >
        		<h1 class="center-block" style="text-align:center;">Inbound Marketing</h1>
        		<p>Também realizamos consultoria para Inbound marketing, para gerar leads para sua empresa.</p>
@@ -95,13 +95,13 @@
 
 <div class="container">
     <div class="row port-section">
-        <div class="col-sm-6 port1" data-aos="fade-right"></div>
+        <div class="col-sm-6 port1" data-aos="fade-up"></div>
 
         <div class="col-sm-6 port2" data-aos="fade-down"></div>
 
-        <div class="col-sm-6 port3" data-aos="fade-up"></div>
+        <div class="col-sm-6 port3" data-aos="fade-down"></div>
 
-        <div class="col-sm-6 port4" data-aos="fade-left"></div>
+        <div class="col-sm-6 port4" data-aos="fade-up"></div>
 
     </div>
 </div>
@@ -169,7 +169,7 @@ first, then Tether, then Bootstrap JS. -->
  <script type="text/javascript" src="aos.js"></script>
  <script>
  	AOS.init({
- 		delay:200
+ 		delay:300
  	});
 
 
